--- a/index.html
+++ b/index.html
@@ -7,14 +7,14 @@
   <script>
     $(document).ready(function () {
       $(window).on("load", function () {
-       var dataImg = {"data":[{"src":"pb1.jpg"},{"src":"pb2..jpg"},{"src":"pb3.jpg"},{"src":"pb4.jpg"},{"src":"pb5.jpg"},{"src":"pb6.jpg"},{"src":"pb7.jpg"},{"src":"pb8.jpg"}]};
+       var dataImg = {"data":[{"src":"pb1.jpg"},{"src":"pb2.jpg"},{"src":"pb3.jpg"},{"src":"pb4.jpg"},{"src":"pb5.jpg"},{"src":"pb6.jpg"},{"src":"pb7.jpg"},{"src":"pb8.jpg"}]};
         imglocation();
         window.onscroll = function(){
           if(scrollside()){
             $.each(dataImg.data,function(index,value){
               var box = $("<div>").addClass("box").appendTo($("#container"));
               var content = $("<div>").addClass("content").appendTo(box);
-              $("<img>").attr("src","../images/"+$(value).attr("src")).appendTo(content);
+              $("<img>").attr("src","./images/"+$(value).attr("src")).appendTo(content);
             });
             imglocation();
           }
@@ -77,52 +77,52 @@
     <div id="container">
           <div class="box">
                 <div class="content">
-                  <img src="../images/pb1.jpg" alt=""/>
+                  <img src="./images/pb1.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="../images/pb2.jpg" alt=""/>
+                  <img src="./images/pb2.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="../images/pb3.jpg" alt=""/>
+                  <img src="./images/pb3.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="../images/pb4.jpg" alt=""/>
+                  <img src="./images/pb4.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="../images/pb5.jpg" alt=""/>
+                  <img src="./images/pb5.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="../images/pb6.jpg" alt=""/>
+                  <img src="./images/pb6.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="../images/pb7.jpg" alt=""/>
+                  <img src="./images/pb7.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="../images/pb8.jpg" alt=""/>
+                  <img src="./images/pb8.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="../images/pb9.jpg" alt=""/>
+                  <img src="./images/pb9.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="../images/pb10.jpg" alt=""/>
+                  <img src="./images/pb10.jpg" alt=""/>
                 </div>
           </div>
       </div>
