--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             $.each(dataImg.data,function(index,value){
               var box = $("<div>").addClass("box").appendTo($("#container"));
               var content = $("<div>").addClass("content").appendTo(box);
-              $("<img>").attr("src","./images/"+$(value).attr("src")).appendTo(content);
+              $("<img>").attr("src","images/"+$(value).attr("src")).appendTo(content);
             });
             imglocation();
           }
@@ -77,52 +77,52 @@
     <div id="container">
           <div class="box">
                 <div class="content">
-                  <img src="./images/pb1.jpg" alt=""/>
+                  <img src="images/pb1.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="./images/pb2.jpg" alt=""/>
+                  <img src="images/pb2.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="./images/pb3.jpg" alt=""/>
+                  <img src="images/pb3.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="./images/pb4.jpg" alt=""/>
+                  <img src="images/pb4.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="./images/pb5.jpg" alt=""/>
+                  <img src="images/pb5.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="./images/pb6.jpg" alt=""/>
+                  <img src="images/pb6.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="./images/pb7.jpg" alt=""/>
+                  <img src="images/pb7.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="./images/pb8.jpg" alt=""/>
+                  <img src="images/pb8.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="./images/pb9.jpg" alt=""/>
+                  <img src="images/pb9.jpg" alt=""/>
                 </div>
           </div>
           <div class="box">
                 <div class="content">
-                  <img src="./images/pb10.jpg" alt=""/>
+                  <img src="images/pb10.jpg" alt=""/>
                 </div>
           </div>
       </div>
