--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head lang="en">
   <meta charset="UTF-8">
   <title>waterfall</title>
-  <script src="../source/jquery-3.2.1.js"></script>
+  <script src="source/jquery-3.2.1.js"></script>
   <script>
     $(document).ready(function () {
       $(window).on("load", function () {
